--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>CSS</title>
 </head>
 <body>
-    
+   <h3 style="color: brown; font: size 59px;" >Hello!!! My name is Gayu</h3> 
 </body>
 </html>
