internal level css

--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS</title>
+    <style>
+       p {
+        color:  #0040ff
+        ;
+        background-color: aliceblue;
+        font-size: 40px;
+       }
+    </style>
 </head>
 <body>
-   <h3 style="color: brown; font: size 59px;" >Hello!!! My name is Gayu</h3> 
+   <h3 style="color:  #e60000
+;background-color:black; font-size:40px;" > Full Stack Developer!!!</h3> <hr>
+<img src="https://miro.medium.com/v2/resize:fit:1400/0*cl7fc6pt1MHjIF4K.png" height="300px"><hr>
+   <p>A full-stack developer helps build and maintain both the front-end and the back-end of a website. Learn about full-stack developer skills, salary, and how you can become one.
+
+   </p>
 </body>
 </html>
