--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS</title>
+    <link rel="stylesheet" href="style.css">
     <style>
        p {
         color:  #0040ff
@@ -17,8 +18,9 @@
    <h3 style="color:  #e60000
 ;background-color:black; font-size:40px;" > Full Stack Developer!!!</h3> <hr>
 <img src="https://miro.medium.com/v2/resize:fit:1400/0*cl7fc6pt1MHjIF4K.png" height="300px"><hr>
-   <p>A full-stack developer helps build and maintain both the front-end and the back-end of a website. Learn about full-stack developer skills, salary, and how you can become one.
+   <p>A full-stack developer helps build and maintain both the front-end and the back-end of a website. Learn about full-stack developer skills, salary, and how you can become one. <hr>
 
    </p>
+   <h2>A full stack developer is a developer or engineer who can tackle projects that involve databases, APIs, build user-facing websites, or even work with clients during the planning phase of projects. Full stack developer skills: HTML, CSS, JavaScript, and one or more back end languages.</h2>
 </body>
 </html>
